<resources>
    <string name="catcho_report_title">Report Issue</string>
    <string name="catcho_title">Title</string>
    <string name="catcho_description">Description</string>
    <string name="catcho_device_info">Device info</string>
    <string name="catcho_email">Email</string>
    <string name="catcho_send_email">Send Email...</string>
    <string name="catcho_no_email_clients">There are no email clients installed.</string>
    <string name="catcho_err_send_msg">There\'s an error during send the msg, please try again later.</string>
</resources>
