<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:focusable="true" android:focusableInTouchMode="true"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/catcho_primary">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="130dp"
                    android:text="@string/catcho_report_title"
                    android:gravity="bottom"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:textColor="@color/catcho_text_light"
                    android:textSize="32dp"/>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingTop="32dp"
                        android:paddingRight="16dp"
                        android:paddingLeft="16dp">
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="32dp">
                            <EditText
                                android:id="@+id/catcho_bug_title"
                                android:singleLine="true"
                                android:inputType="textCapSentences"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/abc_text_size_body_2_material"
                                android:hint="@string/catcho_title"/>
                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="32dp">
                            <EditText
                                android:id="@+id/catcho_bug_description"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/abc_text_size_body_2_material"
                                android:hint="@string/catcho_description"/>
                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="32dp">
                            <EditText
                                android:id="@+id/catcho_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:textSize="@dimen/abc_text_size_body_2_material"
                                android:hint="@string/catcho_email"/>
                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="32dp">
                            <EditText
                                android:id="@+id/catcho_device_info"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/abc_text_size_body_2_material"
                                android:enabled="false"
                                android:hint="@string/catcho_device_info"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>



    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/catcho_fab_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/catcho_ic_send"
            android:background="@color/catcho_primary"
            android:tint="@color/catcho_text_light"/>
    </FrameLayout>

</RelativeLayout>